# rr2

./: Cargo.toml  README.md
src/: main.rs
src/analysis/: fake_anal.rs  functions.rs  mod.rs  xrefs.rs
src/binary/: info.rs  loader.rs  mod.rs
src/cli/: commands.rs  help.rs  mod.rs  parser.rs
src/core/: config.rs  mod.rs  shell.rs  state.rs
src/disasm/: decompiler.rs  fake_disasm.rs  instructions.rs  mod.rs
src/humor/: comments.rs  easter_eggs.rs  fortunes.rs  insults.rs  mod.rs
src/print/: hex.rs  mod.rs  strings.rs
src/visual/: graphs.rs  mod.rs  mode.rs
