[package]
name = "rr2"
version = "0.1.337"
edition = "2024"
description = "radare rust 2 - where undefined behavior is a feature"
authors = ["The Segfault Collective <dev@null.void>"]
license = "WTFPL"
keywords = ["reverse-engineering", "disassembler", "parody", "humor", "definitely-not-malware"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
rand = "0.8"
rustyline = "14"
goblin = "0.8"
chrono = "0.4"
